2006-03-06  Mark Wielaard  <mark@klomp.org>

	* NEWS: Add updates for 0.90 release.

2006-03-05  Mark Wielaard  <mark@klomp.org>

	* configure.ac (VERSION): Set to 0.90-pre-generics.
	* Merge with CVS trunk from classpath-0_90-branch-point.

2006-03-04  Tom Tromey  <tromey@redhat.com>

	* javax/swing/SpringLayout.java (Constraints): New constructor.
	* javax/swing/Spring.java (width): New method.
	(height): Likewise.
	(scale): Likewise.

2006-03-04  Mark Wielaard  <mark@klomp.org>

	* gnu/java/net/protocol/http/HTTPConnection.java (Pool.get): Remove
	existing connection from pool before returning.

2006-03-04  Mark Wielaard  <mark@klomp.org>

	* gnu/xml/stream/SAXParser.java (parse(InputSource)): Ignore
	exceptions thrown by handlers while cleaning up and rethrow original
	exception.

2006-03-04  Tom Tromey  <tromey@redhat.com>

	* java/beans/PropertyDescriptor.java (createPropertyEditor): New
	method.
	(findConstructor): Likewise.
	(instantiateClass): Likewise.

2006-03-04  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/java/rmi/dgc/DGCImpl.java:  More comments, boilerplate fix.
	(dirty): Do not synchronize on Hashtable. Use the passed (requested) 
	lease value and not always the default one.
 	(LeaseRecord): Remember the array of objects, marked as dirty.
 	java/rmi/dgc/Lease.java: Boilerplate fix.

2006-03-05  Raif S. Naffah  <raif@swiftdsl.com.au>

	* java/util/jar/Attributes.java (putValue): Made it public and updated
	method documentation.

2006-03-04  Mark Wielaard  <mark@klomp.org>

	* java/awt/Container.java (remove(int)): Always call removeNotify()
	on removed Component.

2006-03-04  Mark Wielaard  <mark@klomp.org>

	Fixes bug #26460 reported by Beat Wolf <asraniel@fryx.ch>.
	* javax/swing/JEditorPane.java (setText): Check for empty String
	with equals(), not equality (==).

2006-03-04  Mark Wielaard  <mark@klomp.org>

	* javax/swing/text/html/HTMLDocument.java: Qualify ElementSpec as
	DefaultStyledDocument.ElementSpec for gcj 4.0.x.
